updated login route for documentation
